fixed scroll on safari

--- a/input.css
+++ b/input.css
@@ -11,8 +11,7 @@ main::before {
     content: "";
     width: 100%;
     height: 100%;
-    left: 0;
-    right: 0;
+    
     position: absolute;
     background-position: center;
     opacity: 0.1;
