--- a/output.css
+++ b/output.css
@@ -917,10 +917,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   overflow: hidden;
 }
 
-.scroll-smooth {
-  scroll-behavior: smooth;
-}
-
 .rounded-md {
   border-radius: 0.375rem;
 }
@@ -1324,8 +1320,6 @@ main::before {
   content: "";
   width: 100%;
   height: 100%;
-  left: 0;
-  right: 0;
   position: absolute;
   background-position: center;
   opacity: 0.1;
